2013-04-18  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_inventories.php
	  include/styles/integria.css
	  operation/inventories/inventory.php
	  operation/inventories/inventory_search.php: Changed inventory
	search. Added treeview.

2013-04-15  Vanessa Gil <vanessa.gil@artica.es>

	* include/ajax/inventories.php: Changed pop up
	with external table view.

2013-04-15  Dario Rodriguez <dario@artica.es>

	* integria_db.sql: Added tincident_stats table.
	* operation/incidents/incident_detail.php: Added functions to fill incident statistics.
	* include/functions_db.php: function borrar_incidente now deletes incident_stat for the
	incident involved.
	* include/functions_incidents.php: Created new function incidents_add_incident_stat

2013-04-15  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  include/functions_db.php
	  include/functions_inventories.php
	  operation/side_menu.php
	  operation/inventories/inventory_detail.php
	  operation/inventories/manage_objects.php
	  operation/inventories/manage_objects_types_list.php: Changed
	structure from 'tinventory' and added incidents type with
	custom fields.

	* include/ajax/inventories.php: Added file.

2013-04-15  Dario Rodriguez <dario@artica.es>

	* include/functions_db.mysql.php: Revert to old array result type because if not 
	a lot of views will be broken (the first changes was to made easy an inventory function, we
	will look for a workaround)

2013-04-15  Dario Rodriguez <dario@artica.es>

	* include/functions_db.mysql.php: Fixed an error on return of get_db_sql function,
	fixed a missing ).
	* include/functions.php: Fixed an enterprise installed check, now uses isset.

2013-04-15  Dario Rodriguez <dario@artica.es>

	* include/functions_db.mysql.php: Changed array fetch on process_sql to the same as
	Pandora FMS. 

2013-04-15  Dario Rodriguez <dario@artica.es>

	* include/functions_db.mysql.php: Changed mysql_result_type to ASSOC by default.
	* include/config_process.php,