@@ -1,3 +1,12 @@
+2013-04-19  Vanessa Gil <vanessa.gil@artica.es>
+
+	* include/functions_inventories.php
+	  operation/inventories/inventory_detail.php: Added 
+	inventories relationship.
+
+	* operation/inventories/inventory_relationship.php: Added
+	file.
+
 2013-04-18  Vanessa Gil <vanessa.gil@artica.es>
 
 	* include/functions_inventories.php
